// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner should render close button 1`] = `
<aside
  aria-label="Banner"
  className="mock-classname banner"
>
  <div
    className="banner--content image-position__left close-button-spacing"
  >
    <div
      data-onclick="onclick-provided"
      data-testid="cancel-button"
    />
    <h1
      className="banner--title"
    >
      mock title
    </h1>
    <h2
      className="banner--subtitle"
    >
      mock Subtitle
    </h2>
    <img
      alt="mock image alt"
      className="banner--image"
      src="mockImage.src"
    />
  </div>
</aside>
`;

exports[`Banner should render correctly without props 1`] = `
<aside
  aria-label="Banner"
  className="banner"
>
  <div
    className="banner--content image-position__left"
  />
</aside>
`;

exports[`Banner should render in Right to Left mode 1`] = `
<aside
  aria-label="Banner"
  className="mock-classname banner rtl"
>
  <div
    className="banner--content image-position__left close-button-spacing"
  >
    <div
      data-onclick="onclick-provided"
      data-testid="cancel-button"
    />
    <h1
      className="banner--title"
    >
      mock title
    </h1>
    <h2
      className="banner--subtitle"
    >
      mock Subtitle
    </h2>
    <img
      alt="mock image alt"
      className="banner--image mock-image-classname"
      src="mockImage.src"
    />
  </div>
</aside>
`;

exports[`Banner should render title, subtitle and image 1`] = `
<aside
  aria-label="Banner"
  className="mock-classname banner"
>
  <div
    className="banner--content image-position__left"
  >
    <h1
      className="banner--title"
    >
      mock title
    </h1>
    <h2
      className="banner--subtitle"
    >
      mock Subtitle
    </h2>
    <img
      alt="mock image alt"
      className="banner--image mock-image-classname"
      src="mockImage.src"
    />
  </div>
</aside>
`;

exports[`Banner should render with correct image position class - bottom 1`] = `
<aside
  aria-label="Banner"
  className="banner"
>
  <div
    className="banner--content image-position__bottom"
  />
</aside>
`;

exports[`Banner should render with correct image position class - left 1`] = `
<aside
  aria-label="Banner"
  className="banner"
>
  <div
    className="banner--content image-position__left"
  />
</aside>
`;

exports[`Banner should render with correct image position class - right 1`] = `
<aside
  aria-label="Banner"
  className="banner"
>
  <div
    className="banner--content image-position__right"
  />
</aside>
`;

exports[`Banner should render with correct image position class - top 1`] = `
<aside
  aria-label="Banner"
  className="banner"
>
  <div
    className="banner--content image-position__top"
  />
</aside>
`;

exports[`Banner should use custom render function for subtitle 1`] = `
<aside
  aria-label="Banner"
  className="banner"
>
  <div
    className="banner--content image-position__left"
  >
    <h1
      className="banner--title"
    >
      mock title
    </h1>
    <h2
      className="banner--subtitle"
    >
      <div
        data-testid="custom_render"
      >
        mock Subtitle
      </div>
    </h2>
  </div>
</aside>
`;

exports[`Banner should use custom render function for title 1`] = `
<aside
  aria-label="Banner"
  className="banner"
>
  <div
    className="banner--content image-position__left"
  >
    <h1
      className="banner--title"
    >
      <div
        data-testid="custom_render"
      >
        mock title
      </div>
    </h1>
    <h2
      className="banner--subtitle"
    >
      mock Subtitle
    </h2>
  </div>
</aside>
`;
